--- a/bio.html
+++ b/bio.html
@@ -21,7 +21,7 @@
 	<br>
 	Suspendisse vel urna congue, bibendum ligula id, fringilla sem. Suspendisse tincidunt ullamcorper dapibus. Donec ut dignissim massa, eu iaculis tellus. Maecenas eu tortor vel quam luctus egestas sed vitae magna. Praesent consectetur, lacus a efficitur sollicitudin, ipsum urna suscipit lorem, a finibus lectus libero at tortor. Vivamus et nulla scelerisque, interdum tellus eget, consectetur neque. Mauris ac imperdiet orci, sodales tincidunt orci. Suspendisse ac turpis orci. Maecenas sit amet egestas justo. Maecenas est sem, hendrerit et lectus eu, tincidunt efficitur ante. Maecenas sit amet congue tellus. Aenean auctor eget augue varius eleifend. Nunc ac eros at elit laoreet molestie quis vel sapien. 
 	<br><br><br><br><br><br><br>
-		<p><a href="https://eliasbrodsky.github.io/">show me the cube</a></p>
+		<p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
 </div>
