--- a/pages/bio.html
+++ b/pages/bio.html
@@ -17,9 +17,9 @@
 <!-- box -->
 <div id="wrapper">
 	<center><br><br><br>
-	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eleifend faucibus elit, eu consequat metus convallis vitae. Vivamus a nisi enim. Etiam scelerisque eros lorem, in mollis ante vulputate in. Morbi sit amet massa feugiat, egestas ante ut, fermentum erat. Praesent sed posuere mauris. Etiam ac sem sit amet arcu aliquet vestibulum. In suscipit in enim id aliquam. Ut vehicula ex vel diam elementum, in lobortis erat commodo. Vestibulum gravida tortor id est dapibus, ut pulvinar nibh eleifend. Quisque gravida a nunc at tempor. Nam in nisl et ante laoreet hendrerit id eget metus.
+	Elias Brodsky is a composer, writer, and visual artist. He has always been fascinated by art that made his stomach drop, and aims to evoke that sort of reaction with his own art. Lately, he has been interested in the electroacoustic medium and graphic notation. He enjoys combining his interests in visual art and music to create visually engaging scores.
 	<br><br>
-	Suspendisse vel urna congue, bibendum ligula id, fringilla sem. Suspendisse tincidunt ullamcorper dapibus. Donec ut dignissim massa, eu iaculis tellus. Maecenas eu tortor vel quam luctus egestas sed vitae magna. Praesent consectetur, lacus a efficitur sollicitudin, ipsum urna suscipit lorem, a finibus lectus libero at tortor. Vivamus et nulla scelerisque, interdum tellus eget, consectetur neque. Mauris ac imperdiet orci, sodales tincidunt orci. Suspendisse ac turpis orci. Maecenas sit amet egestas justo. Maecenas est sem, hendrerit et lectus eu, tincidunt efficitur ante. Maecenas sit amet congue tellus. Aenean auctor eget augue varius eleifend. Nunc ac eros at elit laoreet molestie quis vel sapien. 
+	Elias has participated in the International Summer School at the Moscow P. I. Tchaikovsky Conservatory in 2018, and Charlotte New Music Festival in 2020, where he was also an intern. Currently, he is in the process of receiving his B.M. in Music Composition at Stephen F. Austin State University in Nacogdoches, TX.
 	<br><br><br><br>
 		<p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
