--- a/pages/bio.html
+++ b/pages/bio.html
@@ -20,8 +20,8 @@
 	Elias Brodsky is a composer, writer, and visual artist. He has always been fascinated by art that made his stomach drop, and aims to evoke that sort of reaction with his own art. Lately, he has been interested in the electroacoustic medium and graphic notation. He enjoys combining his interests in visual art and music to create visually engaging scores.
 	<br><br>
 	Elias has participated in the International Summer School at the Moscow P. I. Tchaikovsky Conservatory in 2018, and Charlotte New Music Festival in 2020, where he was also an intern. Currently, he is in the process of receiving his B.M. in Music Composition at Stephen F. Austin State University in Nacogdoches, TX.
-	<br><br><br><br>
-		<p><a href="https://eliasbrodsky.github.io/">back</a></p>
+	<br><br><br><br></div>
+	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
 </div>
