--- a/pages/works.html
+++ b/pages/works.html
@@ -12,7 +12,7 @@
 <body>
 <!-- Main Container -->
 <div class="container-fluid"> 
-	<center><div id="name"><p><a><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p></div>
+	<center><div id="name"><p><a style="text-decoration:none" href="https://eliasbrodsky.github.io/"><b>E L I A S&nbsp; &nbsp;B R O D S K Y</b></a></p></div>
   <p>composer</p></center>
 <!-- box -->
 <div id="wrapper">
