--- a/pages/bio.html
+++ b/pages/bio.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="../css/ex.css" />
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
+	<title>elias brodsky | bio</title>
 </head>
 <body>
 <!-- Main Container -->
@@ -17,10 +18,14 @@
 <!-- box -->
 <div id="wrapper">
 	<br><br><br>
-	Elias Brodsky is a composer, writer, and visual artist. He has always been fascinated by art that made his stomach drop, and aims to evoke that sort of reaction with his own art. Lately, he has been interested in the electroacoustic medium and graphic notation. He enjoys combining his interests in visual art and music to create visually engaging scores.
+	Elias Brodsky (any pronouns) is a nonbinary transdisciplinary artist, receptionist and broth enthusiast.
 	<br><br>
-	Elias has participated in the International Summer School at the Moscow P. I. Tchaikovsky Conservatory in 2018, and Charlotte New Music Festival in 2020, where he was also an intern. Currently, he is in the process of receiving his B.M. in Music Composition at Stephen F. Austin State University in Nacogdoches, TX.
-	<br><br><br><br></div>
+	Working primarily in the electroacoustic medium, his work reflects upon his fascination with discomfort. He is drawn to art that makes his stomach drop and aims to evoke that reaction with his art. Elias pulls inspiration from mundane encounters with discomfort and reimagines them through a lens of intensity and drama, while also juxtaposing them with absurdist humour. His work has been described as “cool, i guess” and “like walking through a cursed grocery store”.
+	<br><br>
+	Elias enjoys collaborating with local artists and participating in the DIY scene. His music has recently been featured in Connor Molen’s short film “it can’t be like this”. Currently, he is working on an adaptation of the Twine game “howling dogs” by Porpentine Charity Heartscape into an electroacoustic monodrama featuring the Piapro vocal synthesizer Hatsune Miku.
+	<br><br>
+	Elias has participated in the International Summer School at the Moscow P. I. Tchaikovsky Conservatory in 2018, Charlotte New Music Festival in 2020 (where he was also an intern), and the 2021 SPLICE Summer Institute. Currently, he is in the process of completing his B.M. in Music Composition at Stephen F. Austin State University in Nacogdoches, TX. 
+	<br><br></div>
 	<div id="back"><p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
 	<br>
