--- a/pages/bio.html
+++ b/pages/bio.html
@@ -18,7 +18,7 @@
 <!-- box -->
 <div id="wrapper">
 	<br><br><br>
-	Elias Brodsky (any pronouns) is a nonbinary transdisciplinary artist, receptionist and broth enthusiast.
+	Elias Brodsky is a transdisciplinary artist, receptionist and broth enthusiast.
 	<br><br>
 	Working primarily in the electroacoustic medium, his work reflects upon his fascination with discomfort. He is drawn to art that makes his stomach drop and aims to evoke that reaction with his art. Elias pulls inspiration from mundane encounters with discomfort and reimagines them through a lens of intensity and drama, while also juxtaposing them with absurdist humour. His work has been described as “cool, i guess” and “like walking through a cursed grocery store”.
 	<br><br>
