--- a/pages/bio.html
+++ b/pages/bio.html
@@ -9,6 +9,7 @@
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 	<title>bio | elias brodsky</title>
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 <!-- Main Container -->
@@ -18,6 +19,10 @@
 <!-- box -->
 <div id="wrapper">
  <br><br><br>
+	<img src="portrait.PNG" 
+	 style="object-fit:scale-down;
+            width:60%px;"/>
+	<br>
 	Elias Brodsky is a multidisciplinary artist, receptionist and broth enthusiast.
 	<br><br>
 	Working primarily in the electroacoustic medium, his work reflects upon his fascination with discomfort. He is drawn to art that makes his stomach drop and aims to evoke that reaction with his art. Elias pulls inspiration from mundane encounters with discomfort and reimagines them through a lens of intensity and drama, while also juxtaposing them with absurdist humour. His work has been described as “cool, i guess” and “like walking through a cursed grocery store”.
