--- a/pages/bio.html
+++ b/pages/bio.html
@@ -21,7 +21,7 @@
  <br><br><br>
 	<img src="portrait.PNG" 
 	 style="object-fit:scale-down;
-            width:60%px;"/>
+            width:25%;"/>
 	<br>
 	Elias Brodsky is a multidisciplinary artist, receptionist and broth enthusiast.
 	<br><br>
