--- a/pages/bio.html
+++ b/pages/bio.html
@@ -19,9 +19,9 @@
 <!-- box -->
 <div id="wrapper">
  <br><br><br>
-	<img src="portrait.PNG" 
+	<center><img src="portrait.PNG" 
 	 style="object-fit:scale-down;
-            width:25%;"/>
+		width:50%;"/></center>
 	<br>
 	Elias Brodsky is a multidisciplinary artist, receptionist and broth enthusiast.
 	<br><br>
