--- a/pages/bio.html
+++ b/pages/bio.html
@@ -25,7 +25,7 @@
 	<br>
 	Elias Brodsky is a multidisciplinary artist, receptionist and broth enthusiast.
 	<br><br>
-	Working primarily in the electroacoustic medium, his work reflects upon his fascination with discomfort. He is drawn to art that makes his stomach drop and aims to evoke that reaction with his art. Elias pulls inspiration from mundane encounters with discomfort and reimagines them through a lens of intensity and drama, while also juxtaposing them with absurdist humour. His work has been described as “cool, i guess” and “like walking through a cursed grocery store”.
+	Working primarily in the electroacoustic medium, his work reflects upon his fascination with discomfort. He is drawn to art that makes his stomach drop and aims to evoke that reaction with his own art. Elias pulls inspiration from mundane encounters with discomfort and reimagines them through a lens of intensity and drama, while also juxtaposing them with bizarre humour. His work has been described as “cool, i guess” and “like walking through a cursed grocery store”.
 	<br><br>
 	Elias enjoys collaborating with local artists and participating in the DIY scene. His music has recently been featured in Connor Molen’s short film “it can’t be like this”. He has also collaborated with Voices of Change and Duo Zonda. Currently, he is working on an adaptation of the Twine game “howling dogs” by Porpentine Charity Heartscape into an electroacoustic monodrama featuring the Piapro vocal synthesizer Hatsune Miku.
 	<br><br>
